# bg-euro-rag

./: .env.example  README.md  main_agent.py  main_rag.py  pyproject.toml
src/: parse_files.py  search_qa.py  settings.py
src/resources/: bnb_law_embeddings.npy  bnb_law_texts.json  q_and_a.txt  q_and_a_embeddings.npy  q_and_a_texts.json
